# house-dashboard

./: .drone.yml  .gitattributes  .gitignore  .gitjournal.toml  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  License.txt  Makefile.toml  README.md  Readme.md  clippy.toml  justfile
buttons/: Makefile  display-buttons.dts
docs/: display-configuration.md  run.cast
house-dashboard/: Cargo.toml
house-dashboard-common/: Cargo.toml
house-dashboard-common/src/: colormap.rs  configuration.rs  duration.rs  error.rs  lib.rs  palette.rs  types.rs
house-dashboard-common/src/element/: colorbar.rs  loadbar.rs  mod.rs
house-dashboard-geographical-heatmap/: Cargo.toml
house-dashboard-geographical-heatmap/src/: chart.rs  configuration.rs  influxdb.rs  lib.rs
house-dashboard-image/: Cargo.toml
house-dashboard-image/src/: chart.rs  configuration.rs  error.rs  lib.rs
house-dashboard-influxdb/: Cargo.toml
house-dashboard-influxdb/src/: error.rs  influxql.rs  lib.rs  logging.rs
house-dashboard-infrastructure-summary/: Cargo.toml
house-dashboard-infrastructure-summary/src/: chart.rs  configuration.rs  error.rs  influxdb.rs  lib.rs  loadbar.rs
house-dashboard-proxmox-summary/: Cargo.toml
house-dashboard-proxmox-summary/src/: chart.rs  configuration.rs  influxdb.rs  lib.rs  loadbar.rs
house-dashboard-temporal-heatmap/: Cargo.toml
house-dashboard-temporal-heatmap/src/: chart.rs  colorbar.rs  configuration.rs  error.rs  influxdb.rs  lib.rs
house-dashboard-test/: Cargo.toml
house-dashboard-test/src/: lib.rs
house-dashboard-test/tests/behaviour/: main.rs
house-dashboard-test/tests/data/geographical-heatmap/: apartment-configuration.toml  apartment-dark-configuration.toml  apartment.json  italy-configuration.toml  italy-dark-configuration.toml  italy.json
house-dashboard-test/tests/data/infrastructure/: hosts.json  infrastructure-configuration.toml  loads.json
house-dashboard-test/tests/data/proxmox/: hosts.json  loads.json  proxmox-configuration.toml  statuses.json
house-dashboard-test/tests/data/style/: dark.toml  light.toml
house-dashboard-test/tests/data/temporal-heatmap/: outdoor-temperature-configuration.toml  outdoor-temperature.json
house-dashboard-test/tests/data/trend/: room-temperature-configuration.toml  room-temperature-mapping.json
house-dashboard-test/tests/features/: geographical-heatmap.feature  infrastructure-summary.feature  proxmox-summary.feature  temporal-heatmap.feature  trend.feature
house-dashboard-trend/: Cargo.toml
house-dashboard-trend/src/: chart.rs  configuration.rs  influxdb.rs  lib.rs
house-dashboard/debian/: house-dashboard-generation.service
house-dashboard/src/: commandline.rs  configuration.rs  lib.rs  logging.rs  main.rs
src/: backend.rs  chart.rs  colormap.rs  commandline.rs  configuration.rs  error.rs  framebuffer.rs  influxdb.rs  main.rs  palette.rs  types.rs
src/chart/: geographicalheatmap.rs  geographicalmap.rs  image.rs  infrastructuresummary.rs  mod.rs  proxmoxsummary.rs  temporalheatmap.rs  trend.rs
src/chart/element/: colorbar.rs  loadbar.rs  mod.rs
