[workspace]
members = [
    "house-dashboard",
    "house-dashboard-common",
    "house-dashboard-influxdb",
    "house-dashboard-infrastructure-summary",
    "house-dashboard-proxmox-summary",
    "house-dashboard-trend",
    "house-dashboard-geographical-heatmap",
    "house-dashboard-temporal-heatmap",
    "house-dashboard-image",
    "house-dashboard-test",
]
resolver = "2"

[workspace.package]
version = "1.1.0-dev"
authors = ["Claudio Mattera <dev@claudiomattera.it>"]
edition = "2021"
description = "An application to generate and display charts for a house dashboard"
readme = "Readme.md"
homepage = "https://gitlab.com/claudiomattera/house-dashboard"
repository = "https://gitlab.com/claudiomattera/house-dashboard"
license = "MPL-2.0"
keywords = [
    "dashboard",
]
categories = [
    "command-line-utilities",
]
publish = false

[workspace.dependencies]
# Workspace
house-dashboard-common = { version = "=1.1.0-dev", path = "./house-dashboard-common" }
house-dashboard-influxdb = { version = "=1.1.0-dev", path = "./house-dashboard-influxdb" }
house-dashboard-infrastructure-summary = { version = "=1.1.0-dev", path = "./house-dashboard-infrastructure-summary" }
house-dashboard-proxmox-summary = { version = "=1.1.0-dev", path = "./house-dashboard-proxmox-summary" }
house-dashboard-trend = { version = "=1.1.0-dev", path = "./house-dashboard-trend" }
house-dashboard-geographical-heatmap = { version = "=1.1.0-dev", path = "./house-dashboard-geographical-heatmap" }
house-dashboard-temporal-heatmap = { version = "=1.1.0-dev", path = "./house-dashboard-temporal-heatmap" }
house-dashboard-image = { version = "=1.1.0-dev", path = "./house-dashboard-image" }

thiserror = { version = "1", default-features = false }
miette = { version = "5", default-features = false }

async-std = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
image = { version = "0.24", default-features = false }

bpaf = { version = "0.7", default-features = false }

url = { version = "2", default-features = false }

tracing = { version = "0.1", default-features = false }
tracing-futures = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
tracing-log = { version = "0.2", default-features = false }
tracing-journald = { version = "0.3", default-features = false }

serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
serde_html_form = { version = "0.2", default-features = false }
toml = { version = "0.8", default-features = false }

isahc = { version = "1.7", default-features = false }

extrasafe = { version = "0.1", default-features = false }

palette = { version = "0.6", default-features = false }

regex = { version = "1", default-features = false }

time = { version = "0.3", default-features = false }
time-tz = { version = "2", default-features = false }
time-fmt = { version = "0.3", default-features = false }
chrono = { version = "0.4", default-features = false }

num-traits = { version = "0.2", default-features = false }

plotters = { version = "0.3.5", default-features = false }
plotters-backend = { version = "0.3.5", default-features = false }

itertools = { version = "0.12", default-features = false }

cucumber = { version = "0.20", default-features = false }

[profile.release]
# Necessary for release builds on Raspberry Pi
# https://github.com/rust-lang/cargo/issues/6489
# https://github.com/rust-lang/rust/issues/62896
codegen-units = 1

lto = "thin"
strip = "debuginfo"
