[package]
name = "house-dashboard-common"
version = "1.0.0"
authors = ["Claudio Mattera <dev@claudiomattera.it>"]
edition = "2021"
description = "An application to generate and display charts for a house dashboard"
readme = "Readme.md"
homepage = "https://gitlab.com/claudiomattera/house-dashboard"
repository = "https://gitlab.com/claudiomattera/house-dashboard"
license = "MPL-2.0"
keywords = [
    "dashboard",
]
categories = [
    "command-line-utilities",
]
publish = false

[dependencies]
thiserror = { version = "1" }
miette = { version = "5", features = ["fancy"] }

tracing = { version = "0.1" }

palette = { version = "0.5", default-features = false, features = ["std"] }

regex = { version = "1" }

serde = { version = "1", features = ["derive"] }

time = { version = "0.3" }
chrono = { version = "0.4" }

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters/"
branch = "master"
default-features = false
features = ["bitmap_backend", "bitmap_encoder", "line_series", "datetime", "ab_glyph"]

[dependencies.plotters-backend]
git = "https://github.com/plotters-rs/plotters/"
branch = "master"
