[package]
name = "house-dashboard-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
thiserror = { version = "1" }
miette = { version = "5", features = ["fancy"] }

tracing = { version = "0.1" }

palette = { version = "0.5", default-features = false, features = ["std"] }

regex = { version = "1" }

serde = { version = "1", features = ["derive"] }

time = { version = "0.3" }
chrono = { version = "0.4" }

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters/"
branch = "master"
default-features = false
features = ["bitmap_backend", "bitmap_encoder", "line_series", "datetime", "ab_glyph"]

[dependencies.plotters-backend]
git = "https://github.com/plotters-rs/plotters/"
branch = "master"
