[package]
name = "house-dashboard-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
miette = { workspace = true, features = ["fancy"] }

tracing = { workspace = true }

palette = { workspace = true, features = ["std"] }
enterpolation = { workspace = true, features = ["linear", "std"] }

regex = { workspace = true }

serde = { workspace = true, features = ["derive"] }

time = { workspace = true }
chrono = { workspace = true }

plotters = { workspace = true, features = ["bitmap_backend", "bitmap_encoder", "line_series", "datetime", "ab_glyph"] }
plotters-backend = { workspace = true }
