[package]
name = "house-dashboard-geographical-heatmap"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
house-dashboard-common = { path = "../house-dashboard-common" }
house-dashboard-influxdb = { path = "../house-dashboard-influxdb" }

thiserror = { version = "1" }
miette = { version = "5", features = ["fancy"] }

tracing = { version = "0.1" }

serde = { version = "1", features = ["derive"] }

num-traits = { version = "0.2" }

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters/"
branch = "master"
default-features = false
features = ["bitmap_backend", "bitmap_encoder", "line_series", "datetime", "ab_glyph"]
