[package]
name = "house-dashboard-image"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
house-dashboard-common = { workspace = true }

thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }

tracing = { workspace = true }

serde = { workspace = true, features = ["derive"] }

image = { workspace = true, features = ["bmp"] }

plotters = { workspace = true, features = ["bitmap_backend", "bitmap_encoder", "line_series", "datetime", "ab_glyph"] }
plotters-backend = { workspace = true }
