[package]
name = "house-dashboard-influxdb"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
house-dashboard-common = { path = "../house-dashboard-common" }

async-std = { version = "1" }

isahc = { version = "1.7", default-features = false }

url = { version = "2" }
serde_html_form = { version = "0.2" }

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

thiserror = { version = "1" }

tracing = { version = "0.1" }
