[package]
name = "house-dashboard-influxdb"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
house-dashboard-common = { workspace = true }

async-std = { workspace = true, features = ["std"] }

isahc = { workspace = true }

url = { workspace = true }
serde_html_form = { workspace = true }

chrono = { workspace = true, features = ["serde"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }

thiserror = { workspace = true }

tracing = { workspace = true }
