[package]
name = "house-dashboard"
version = "1.0.0-dev"
authors = ["Claudio Mattera <dev@claudiomattera.it>"]
edition = "2021"
description = "An application to generate and display charts for a house dashboard"
readme = "Readme.md"
homepage = "https://gitlab.com/claudiomattera/house-dashboard"
repository = "https://gitlab.com/claudiomattera/house-dashboard"
license = "MPL-2.0"
keywords = [
    "dashboard",
]
categories = [
    "command-line-utilities",
]
publish = false

[features]
default = []
extrasafe = ["dep:extrasafe"]
trend-chart = ["house-dashboard-trend"]
temporal-heatmap-chart = ["house-dashboard-temporal-heatmap"]
geographical-heatmap-chart = ["house-dashboard-geographical-heatmap"]
image-chart = ["house-dashboard-image"]
infrastructure-summary-chart = ["house-dashboard-infrastructure-summary"]
proxmox-summary-chart = ["house-dashboard-proxmox-summary"]

[dependencies]
house-dashboard-common = { path = "../house-dashboard-common" }
house-dashboard-influxdb = { path = "../house-dashboard-influxdb" }
house-dashboard-infrastructure-summary = { path = "../house-dashboard-infrastructure-summary", optional = true }
house-dashboard-proxmox-summary = { path = "../house-dashboard-proxmox-summary", optional = true }
house-dashboard-trend = { path = "../house-dashboard-trend", optional = true }
house-dashboard-geographical-heatmap = { path = "../house-dashboard-geographical-heatmap", optional = true }
house-dashboard-temporal-heatmap = { path = "../house-dashboard-temporal-heatmap", optional = true }
house-dashboard-image = { path = "../house-dashboard-image", optional = true }

thiserror = { version = "1" }
miette = { version = "5", features = ["fancy"] }

async-std = { version = "1", features = ["attributes"] }
futures = { version = "0.3" }
image = { version = "0.24", default-features = false, features = ["bmp"] }

bpaf = { version = "0.7" }

url = { version = "2", features = ["serde"] }

tracing = { version = "0.1" }
tracing-futures = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = { version = "0.1" }
tracing-journald = { version = "0.3" }

serde = { version = "1", features = ["derive"] }
toml = { version = "0.5" }

isahc = { version = "1.7", default-features = false }

extrasafe = { version = "0.1", optional = true }

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters/"
branch = "master"
default-features = false
features = ["bitmap_backend", "bitmap_encoder", "line_series", "datetime", "ab_glyph"]

[package.metadata.deb]
extended-description = """\
This application generates charts for a house dashboard.
Charts are dynamically configured through a TOML file, and their data is
fetched from an InfluxDB instance."""
section = "utility"
