[package]
name = "house-dashboard"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = []
trend-chart = ["house-dashboard-trend"]
temporal-heatmap-chart = ["house-dashboard-temporal-heatmap"]
geographical-heatmap-chart = ["house-dashboard-geographical-heatmap"]
image-chart = ["house-dashboard-image"]
infrastructure-summary-chart = ["house-dashboard-infrastructure-summary"]
proxmox-summary-chart = ["house-dashboard-proxmox-summary"]

[dependencies]
house-dashboard-common = { workspace = true }
house-dashboard-influxdb = { workspace = true }
house-dashboard-infrastructure-summary = { workspace = true, optional = true }
house-dashboard-proxmox-summary = { workspace = true, optional = true }
house-dashboard-trend = { workspace = true, optional = true }
house-dashboard-geographical-heatmap = { workspace = true, optional = true }
house-dashboard-temporal-heatmap = { workspace = true, optional = true }
house-dashboard-image = { workspace = true, optional = true }

thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }

async-std = { workspace = true, features = ["attributes", "default"] }
futures = { workspace = true, features = ["std"] }
image = { workspace = true, features = ["bmp"] }

bpaf = { workspace = true }

url = { workspace = true, features = ["serde"] }

tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
tracing-log = { workspace = true }
tracing-journald = { workspace = true }

serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse"] }

isahc = { workspace = true }

plotters = { workspace = true, features = ["bitmap_backend", "bitmap_encoder", "line_series", "datetime", "ab_glyph"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
extrasafe = { workspace = true }

[package.metadata.deb]
maintainer = "Claudio Mattera <dev@claudiomattera.it>"
copyright = "2023, Claudio Mattera <dev@claudiomattera.it>"
extended-description = """\
This application generates charts for a house dashboard.
Charts are dynamically configured through TOML files, and their data is
fetched from an InfluxDB instance."""
section = "utility"
depends = "$auto"
priority = "optional"
assets = [
    ["target/release/house-dashboard", "usr/bin/", "755"],
    ["../Readme.md", "usr/share/doc/house-dashboard/Readme.md", "644"],
    ["../License.md", "usr/share/doc/house-dashboard/License.md", "644"],
]
maintainer-scripts = "debian/"
systemd-units = [
    { unit-name = "house-dashboard-generation", enable = false },
]
